--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@dev9012/medium-common": "^1.0.0",
+    "@tiptap/pm": "^2.3.0",
+    "@tiptap/react": "^2.3.0",
+    "@tiptap/starter-kit": "^2.3.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-simple-typewriter": "^5.0.1",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
